feature: treasure finished

--- a/Lab3/rooms/treasure.html
+++ b/Lab3/rooms/treasure.html
@@ -12,19 +12,15 @@
     </figure>
 
     <aside>
-        <h3>Lugares a donde puedes ir</h3>
+        <h3>Dentro del cofre encuentras una antorcha y una llave oxidada</h3>
         <ul>
             <li>
-                <span>Un viejo cofre de madera, cubierto de musgo.</span>
-                <a href="./rooms/treasure.html">Abrir el cofre</a>
+                <span>Encender la antorcha: Ilumina la cueva y revela un pasaje oculto.</span>
+                <a href="./treasure1.html">Explorar el pasaje oculto: Encuentras una cámara con un altar y una estatua de una criatura alada.</a>
             </li>
             <li>
-                <span>Un pasaje angosto que se adentra en la cueva.</span>
-                <a href="./rooms/crack.html">Explorar el pasaje angosto: Puede llevarte a la salida... o a algo peor</a>
-            </li>
-            <li>
-                <span>Un portal de piedra con inscripciones antiguas.</span>
-                <a href="./rooms/portal.html">Examinar el portal de piedra: Tal vez haya una manera de activarlo.</a>
+                <span>Tomar la llave: Podria abrir algo mas adelante</span>
+                <a href="./treasure2.html">Guardar la llave y continuar explorando</a>
             </li>
         </ul>
     </aside>
