feature: crack finished

--- a/Lab3/rooms/crack.html
+++ b/Lab3/rooms/crack.html
@@ -6,6 +6,24 @@
     <title>Crack</title>
 </head>
 <body>
-    
+    <figure>
+        <img src="../images/crack.webp" alt="" style = "width: 200px; height: 200px;">
+        <figcaption>Imagen del pasaje</figcaption>    
+    </figure>
+
+    <aside>
+        <h3>Sigues avanzando y encuentras un esqueleto con un pergamino en la mano</h3>
+        <ul>
+            <li>
+                <span>Leer el pergamino</span>
+                <a href="./crack1.html">Contiene un hechizo desconocido</a>
+            </li>
+            <li>
+                <span>Ignorar el pergamino y seguir avanzando</span>
+                <a href="./crack2.html">Llegas a un cruce con dos caminos</a>
+            </li>
+        </ul>
+    </aside>
+
 </body>
 </html>
