feature: lab finished

--- a/Lab3/rooms/portal.html
+++ b/Lab3/rooms/portal.html
@@ -6,6 +6,18 @@
     <title>Cave</title>
 </head>
 <body>
-    
+    <figure>
+        <img src="../images/portal.webp" alt="" style = "width: 200px; height: 200px;">
+        <figcaption>Portal que acabas de cruzar</figcaption>    
+    </figure>
+
+    <aside>
+        <ul>
+            <li>
+                <span>Usar la llave oxidada en una ranura del portal</span>
+                <a href="./portal1.html">Se activa un mecanismo</a>
+            </li>
+        </ul>
+    </aside>
 </body>
 </html>
